few more cross-browser compatibility issues (i.e. signup autocompletion and padding problem on firefox quantum, input fields font unification)

--- a/app/styles/objects/_form.scss
+++ b/app/styles/objects/_form.scss
@@ -25,6 +25,8 @@
     border: 2px solid $contrastColor;
     border-radius: 4px;
     color: $contrastColorDarker;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
   }
 }
 
