--- a/app/styles/views/about/components/_content.scss
+++ b/app/styles/views/about/components/_content.scss
@@ -15,7 +15,7 @@
     border: 1px solid $contrastColor;
     background-color: rgba(0,0,0,0.9);
     border-radius: 5px;
-    padding: 4% 7%;
+    padding: 4vh 4vw;
     overflow: auto;
     .icon {
       width: auto;
